Update for compatibility with JDK 21.